feat(carddemo-app): translate DEFGDGB.jcl IDCAMS DEFINE GDG to DefineGdgApp
Replaces the prior stub DefineGdgApp with a complete schema-compliant
implementation per AAP §0.4.1, §0.6.6, §0.6.12, and §0.7.3.

Source: app/jcl/DEFGDGB.jcl (single STEP05 EXEC PGM=IDCAMS step that
defines six GDG bases with LIMIT(5) SCRATCH and the idempotent
IF LASTCC=12 THEN SET MAXCC=0 re-run idiom).

Translation:
* Each DEFINE GENERATIONDATAGROUP NAME(<DSN>) clause becomes a
  Files.createDirectories(...) call. Dataset names are preserved
  verbatim per AAP §0.6.12 z/OS naming conventions:
    - AWS.M2.CARDDEMO.TRANSACT.BKUP
    - AWS.M2.CARDDEMO.TRANSACT.DALY
    - AWS.M2.CARDDEMO.TRANREPT
    - AWS.M2.CARDDEMO.TCATBALF.BKUP
    - AWS.M2.CARDDEMO.SYSTRAN
    - AWS.M2.CARDDEMO.TRANSACT.COMBINED
* The six bases are held in an immutable List<GdgBase> of a private
  record GdgBase(String name, int limit, boolean scratch).
* LIMIT(5) SCRATCH is recorded in a .retention sidecar metadata file
  under each base for the writer of the +1 generation to consult.
* The IDCAMS IF LASTCC=12 idempotent guard is realised by branching on
  Files.exists(...) — the second run logs an explicit idempotent
  re-run trace, matching the IDCAMS SYSPRINT 'already cataloged' line.

Schema compliance (per the file's get_file_schema output):
* exports DefineGdgApp class with main(String[]) and BATCH_CTX members.
* public static final ScopedValue<BatchRunContext> BATCH_CTX bound at
  job entry via ScopedValue.where(BATCH_CTX, ctx).call(...) per AAP
  §0.6.6 and JEP 506 Final; ThreadLocal is forbidden per AAP §0.7.4.
* internal_imports: BatchRunContext (carddemo-batch) and CobolProgram
  (carddemo-domain); the @CobolProgram annotation records the
  IDCAMS provenance with value, sourcePath, translationDate, notes.
* external_imports: java.util.{List, Locale}, java.util.concurrent
  (transitively via import module java.base; in Java 25 ScopedValue
  lives in java.lang), java.nio.file.{Path, Files}, java.io.IOExceptio